--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -40,6 +40,7 @@ jobs:
           AWS_REGION: ${{ env.AWS_REGION }}
           TF_VAR_email: ${{ secrets.TF_VAR_email }}
           TF_VAR_phone_number: ${{ secrets.TF_VAR_phone_number }}
+          TF_VAR_ENVIRONMENT: dev
 
       # Deploy terraform changes
       - name: Terraform Apply
