--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -38,8 +38,8 @@ jobs:
         run: terraform plan
         env:
           AWS_REGION: ${{ env.AWS_REGION }}
-          TF_VAR_email: ${{ secrets.TF_VAR_email }}
-          TF_VAR_phone_number: ${{ secrets.TF_VAR_phone_number }}
+          TF_VAR_email: ${{ secrets.TF_VAR_EMAIL }}
+          TF_VAR_phone_number: ${{ secrets.TF_VAR_PHONE_NUMBER }}
           TF_VAR_ENVIRONMENT: dev
 
       # Deploy terraform changes
@@ -47,5 +47,5 @@ jobs:
         run: terraform apply -auto-approve
         env:
           AWS_REGION: ${{ env.AWS_REGION }}
-          TF_VAR_email: ${{ secrets.TF_VAR_email }}
-          TF_VAR_phone_number: ${{ secrets.TF_VAR_phone_number }}
+          TF_VAR_email: ${{ secrets.TF_VAR_EMAIL }}
+          TF_VAR_phone_number: ${{ secrets.TF_VAR_PHONE_NUMBER }}
